unpackaged/main/default/objects/Account/fields/Accounts_Email__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Email__c</fullName>
    <label>Accounts Email</label>
    <type>Email</type>
</CustomField>