unpackaged/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is an active account.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>