unpackaged/main/default/objects/Account/fields/Active_Sanctions__c.field-meta.xml
<CustomField>
    <fullName>Active_Sanctions__c</fullName>
    <label>Active Sanctions</label>
    <summaryFilterItems>
        <field>Sanctions__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Sanctions__c.Site_Under_Sanction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>