unpackaged/main/default/objects/Account/fields/Administrator__c.field-meta.xml
<CustomField>
    <fullName>Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auto-populated with the username of the user who requests this site for suspension.</description>
    <inlineHelpText>Auto-populated with the username of the user who requests this site for suspension.</inlineHelpText>
    <label>Administrator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>