unpackaged/main/default/objects/Account/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>Any other name the business is known by.</description>
    <inlineHelpText>Any other name the business is known by.</inlineHelpText>
    <label>Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>