unpackaged/main/default/objects/Account/fields/All_Correspondence_to_Head_Office__c.field-meta.xml
<CustomField>
    <fullName>All_Correspondence_to_Head_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Correspondence to Head Office</label>
    <type>Checkbox</type>
</CustomField>