unpackaged/main/default/objects/Account/fields/Apply_Common_Renewal_Membership_Date__c.field-meta.xml
<CustomField>
    <fullName>Apply_Common_Renewal_Membership_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Common Renewal/Membership Date</label>
    <type>Checkbox</type>
</CustomField>