unpackaged/main/default/objects/Account/fields/Approval_Certifier__c.field-meta.xml
<CustomField>
    <fullName>Approval_Certifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval (Certifier)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>