unpackaged/main/default/objects/Account/fields/Backlog_Amnesty__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Amnesty__c</fullName>
    <label>Backlog Amnesty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>