unpackaged/main/default/objects/Account/fields/Beef__c.field-meta.xml
<CustomField>
    <fullName>Beef__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beef</label>
    <type>Checkbox</type>
</CustomField>