unpackaged/main/default/objects/Account/fields/Bio_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bio_Notes__c</fullName>
    <description>Relevant details to describe the supporter - background summary</description>
    <inlineHelpText>Relevant details to describe the supporter - background summary</inlineHelpText>
    <label>Bio Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>