unpackaged/main/default/objects/Account/fields/BRC_Site_Code__c.field-meta.xml
<CustomField>
    <fullName>BRC_Site_Code__c</fullName>
    <description>Processor/Packers Only</description>
    <inlineHelpText>Processor/Packers Only</inlineHelpText>
    <label>BRC Site Code</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>