unpackaged/main/default/objects/Account/fields/Certificate_Expiry_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Expiry_Date_Calculated__c</fullName>
    <formula>ADDMONTHS(Certificate_Issue_Date__c,12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Expiry Date Calculated</label>
    <type>Date</type>
</CustomField>