unpackaged/main/default/objects/Account/fields/Certificate_Extension_Request_Pending__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Extension_Request_Pending__c</fullName>
    <label>Certificate Extension Request Pending</label>
    <summaryFilterItems>
        <field>Certificate_Extension_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </summaryFilterItems>
    <summaryForeignKey>Certificate_Extension_Request__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>