unpackaged/main/default/objects/Account/fields/Certification_Body__c.field-meta.xml
<CustomField>
    <fullName>Certification_Body__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this is an organisation involved in the auditing of food and farming businesses.</description>
    <inlineHelpText>Check this box if this is an organisation involved in the auditing of food and farming businesses.</inlineHelpText>
    <label>Certification Body</label>
    <type>Checkbox</type>
</CustomField>