unpackaged/main/default/objects/Account/fields/Charitable_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Charitable_Involvement__c</fullName>
    <description>History of giving to charities; names of grants if known</description>
    <inlineHelpText>History of giving to charities; names of grants if known</inlineHelpText>
    <label>Charitable Involvement</label>
    <type>TextArea</type>
</CustomField>