unpackaged/main/default/objects/Account/fields/Company_Industry__c.field-meta.xml
<CustomField>
    <fullName>Company_Industry__c</fullName>
    <description>Custom Industry muti picklist field for RSPCA Assured members as companies can have more than one industry.</description>
    <label>Company Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Company_Industry</valueSetName>
    </valueSet>
</CustomField>