unpackaged/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>Processor / Packer</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Food Service (Consumer facing)</fullName>
            </value>
            <value>
                <fullName>Supermarket Retailer</fullName>
            </value>
            <value>
                <fullName>Pet Food</fullName>
            </value>
            <value>
                <fullName>Shops</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>