unpackaged/main/default/objects/Account/fields/Company_Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>Company_Type_Detail__c</fullName>
    <label>Company Type Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Company_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>Processor / Packer</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Bakery Chain</fullName>
            </value>
            <value>
                <fullName>Contract Caterers</fullName>
            </value>
            <value>
                <fullName>Cafe Chain</fullName>
            </value>
            <value>
                <fullName>Hotel Chains</fullName>
            </value>
            <value>
                <fullName>Pub Chain</fullName>
            </value>
            <value>
                <fullName>Restaurant Chain</fullName>
            </value>
            <value>
                <fullName>Meal Box / Delivery</fullName>
            </value>
            <value>
                <fullName>Caterer (Independent)</fullName>
            </value>
            <value>
                <fullName>Cafe (Independent)</fullName>
            </value>
            <value>
                <fullName>Pub (Independent)</fullName>
            </value>
            <value>
                <fullName>Restaurant (Independent)</fullName>
            </value>
            <value>
                <fullName>Main Supermarket Retailer</fullName>
            </value>
            <value>
                <fullName>Manufacturer (Processor)</fullName>
            </value>
            <value>
                <fullName>Farm shop</fullName>
            </value>
            <value>
                <fullName>Individual stores / shops</fullName>
            </value>
            <value>
                <fullName>Convenience chains</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>