unpackaged/main/default/objects/Account/fields/Create_Renewal_Price_Report__c.field-meta.xml
<CustomField>
    <fullName>Create_Renewal_Price_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Renewal Price Report</label>
    <type>Checkbox</type>
</CustomField>