unpackaged/main/default/objects/Account/fields/Current_User_is_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Account_Manager__c</fullName>
    <formula>Account_Manager__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is Account Manager</label>
    <type>Checkbox</type>
</CustomField>