unpackaged/main/default/objects/Account/fields/Date_Requested_For_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested_For_Suspension__c</fullName>
    <label>Date Requested for Suspended</label>
    <type>Date</type>
</CustomField>