unpackaged/main/default/objects/Account/fields/Date_Suspended_No_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Date_Suspended_No_Evidence__c</fullName>
    <label>Suspension Due to Non-return of Evidence</label>
    <type>Date</type>
</CustomField>