unpackaged/main/default/objects/Account/fields/DEFRA_Approved__c.field-meta.xml
<CustomField>
    <fullName>DEFRA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEFRA Approved</label>
    <type>Checkbox</type>
</CustomField>