unpackaged/main/default/objects/Account/fields/DEFRA_Holding_Number__c.field-meta.xml
<CustomField>
    <fullName>DEFRA_Holding_Number__c</fullName>
    <description>Poultry and Livestock Only; contains letters and numbers</description>
    <label>DEFRA Holding Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>