unpackaged/main/default/objects/Account/fields/Ducks__c.field-meta.xml
<CustomField>
    <fullName>Ducks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ducks</label>
    <type>Checkbox</type>
</CustomField>