unpackaged/main/default/objects/Account/fields/EEC_Number__c.field-meta.xml
<CustomField>
    <fullName>EEC_Number__c</fullName>
    <description>Abattoirs Only</description>
    <inlineHelpText>Abattoirs Only</inlineHelpText>
    <label>EEC Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>