unpackaged/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The main company email.</description>
    <inlineHelpText>The main company email.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>