unpackaged/main/default/objects/Account/fields/EU_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_Registration_Number__c</fullName>
    <label>EU Registration Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>