unpackaged/main/default/objects/Account/fields/Final_Renewal_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Renewal_Reminder_Sent__c</fullName>
    <label>Final Reminder Sent</label>
    <type>Date</type>
</CustomField>