unpackaged/main/default/objects/Account/fields/Further_Information__c.field-meta.xml
<CustomField>
    <fullName>Further_Information__c</fullName>
    <label>Further Information</label>
    <type>TextArea</type>
</CustomField>