unpackaged/main/default/objects/Account/fields/Gangmasters_licence_number_GLLA__c.field-meta.xml
<CustomField>
    <fullName>Gangmasters_licence_number_GLLA__c</fullName>
    <label>Gangmasters licence number (GLLA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>