unpackaged/main/default/objects/Account/fields/Generate_Head_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Generate_Head_Office_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is ticked (automated process), and the head office number field is empty, a new head office number will be generated.</description>
    <label>Generate Head Office Number</label>
    <type>Checkbox</type>
</CustomField>