unpackaged/main/default/objects/Account/fields/Generate_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Generate_Site_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is ticked (automated process), and the site number field is empty, a new site number will be generated.</description>
    <label>Generate Site Number</label>
    <type>Checkbox</type>
</CustomField>