unpackaged/main/default/objects/Account/fields/Head_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Number__c</fullName>
    <inlineHelpText>The first four digits of the full membership number that represents the group</inlineHelpText>
    <label>Head Office Membership Number</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>