unpackaged/main/default/objects/Account/fields/Head_Office_Number_of_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Number_of_Parent_Account__c</fullName>
    <description>This field is used in AccountTriggerHandler class in order to map the site numbers to the head office number when iterating through the list of sites.</description>
    <formula>Parent.Head_Office_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head Office Number of Parent Account</label>
    <type>Text</type>
</CustomField>