unpackaged/main/default/objects/Account/fields/ia_crm__Balance__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Balance__c</fullName>
    <label>Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>