unpackaged/main/default/objects/Account/fields/ia_crm__Corp_Currency_Balance__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Corp_Currency_Balance__c</fullName>
    <label>Corp Currency Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>