unpackaged/main/default/objects/Account/fields/ia_crm__Is_Merged__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Is_Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is used for Intacct merge Account functionality.</inlineHelpText>
    <label>Is Merged</label>
    <type>Checkbox</type>
</CustomField>