unpackaged/main/default/objects/Account/fields/ia_crm__SFDC_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SFDC_Account_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>SFDC Account Id</label>
    <type>Text</type>
</CustomField>