unpackaged/main/default/objects/Account/fields/Invoice_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Address</label>
    <type>Checkbox</type>
</CustomField>