unpackaged/main/default/objects/Account/fields/Latest_Renewal_Price_Date_For__c.field-meta.xml
<CustomField>
    <fullName>Latest_Renewal_Price_Date_For__c</fullName>
    <label>Latest Renewal Price Date For</label>
    <summarizedField>Renewal_Price_Report__c.Membership_Expiry_Date__c</summarizedField>
    <summaryForeignKey>Renewal_Price_Report__c.Site__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>