unpackaged/main/default/objects/Account/fields/LeadToAccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>LeadToAccountRecordType__c</fullName>
    <description>Used to map the account record type from the lead to the account record. Used for validation to ensure that lead gets converted to the correct account type.</description>
    <inlineHelpText>Used to map the account record type from the lead to the account record. Used for validation to ensure that lead gets converted to the correct account type.</inlineHelpText>
    <label>LeadToAccountRecordType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Type</valueSetName>
    </valueSet>
</CustomField>