unpackaged/main/default/objects/Account/fields/Location_Notes__c.field-meta.xml
<CustomField>
    <fullName>Location_Notes__c</fullName>
    <label>Location Notes</label>
    <type>TextArea</type>
</CustomField>