unpackaged/main/default/objects/Account/fields/Membership_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Expiry_Date__c</fullName>
    <inlineHelpText>Membership Expiry Date is 1 year after the Certificate Issue Date by Default. However if common renewal date is used, then Membership Expiry Date reflects when the sites will need to renew by from a group level.</inlineHelpText>
    <label>Membership Expiry Date</label>
    <type>Date</type>
</CustomField>