unpackaged/main/default/objects/Account/fields/Membership_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number_Text__c</fullName>
    <description>Membership number value populated via workflow automatically so that it is searchable from global search.</description>
    <label>Membership Number (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>