unpackaged/main/default/objects/Account/fields/Needs_an_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Needs_an_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs an Assessment</label>
    <type>Checkbox</type>
</CustomField>