unpackaged/main/default/objects/Account/fields/Number_Of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Locations__c</fullName>
    <label>Number Of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>