unpackaged/main/default/objects/Account/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <description>Reason the record status has been put on hold</description>
    <inlineHelpText>Reason the record status has been put on hold</inlineHelpText>
    <label>Partnerships On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>P_P_Record_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Partnerships_On_Hold_Reason</valueSetName>
    </valueSet>
</CustomField>